open facebook messenger when clicked

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "activeTab"
   ],
   "background": {
-    "scripts": ["app.js"],
+    "scripts": ["js/app.js"],
     "persistent": false
   },
   "browser_action": {
@@ -14,8 +14,7 @@
     "default_icon": {                    // optional
       "19": "images/icon19.png",           // optional
       "38": "images/icon38.png"            // optional
-    },
-
+    }
   },
   "manifest_version": 2
 }
