--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "activeTab", "storage", "tabs", "https://www.facebook.com/*"
   ],
   "background": {
-    "scripts": ["js/app.js"],
+    "scripts": ["js/background.js"],
     "persistent": false
   },
   "browser_action": {
