--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,7 @@
 		"default_icon": {
 			"19": "images/icon19.png",
 			"38": "images/icon38.png",
+			"48": "images/icon48.png",
 			"128": "images/icon128.png"
 		}
 	},
