remove beta from name

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Distraction Free Facebook Messenger [beta]",
+	"name": "Distraction Free Facebook Messenger",
 	"description": "Remove all temptation from Facebook Messenger",
 	"version": "0.4",
 	"permissions": [
