--- a/manifest.json
+++ b/manifest.json
@@ -15,14 +15,14 @@
 		"persistent": false
 	},
 	"browser_action": {
-		"default_title": "Just Messenger",
-		"default_icon": {
-			"19": "images/icon19.png",
-			"38": "images/icon38.png",
-			"48": "images/icon48.png",
-			"64": "images/icon64.png",
-			"128": "images/icon128.png"
-		}
+		"default_title": "Just Messenger"
+	},
+	"icons": {
+		"19": "images/icon19.png",
+		"38": "images/icon38.png",
+		"48": "images/icon48.png",
+		"64": "images/icon64.png",
+		"128": "images/icon128.png"
 	},
 	"manifest_version": 2
 }
