--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
 		"tabs",
 		"https://www.facebook.com/*"
 	],
-	"content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+	"content_security_policy": "script-src 'self' https://ssl.google-analytics.com https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js; object-src 'self'",
 	"background": {
 		"page": "background.html",
 		"persistent": false
